--- a/Map Assignment.Rmd
+++ b/Map Assignment.Rmd
@@ -8,7 +8,7 @@ output: html_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
-The source code is available at [GitHub](https://github.com/Krysek/Coursera-Data-Science-Specialization-Developing-Data-Products-Week-2-Assignment). [Just click here!](https://github.com/Krysek/Coursera-Data-Science-Specialization-Developing-Data-Products-Week-2-Assignment)
+The source code is available at [GitHub](https://github.com/eshanhub/Data-Products). [Just click here!](https://github.com/eshanhub/Data-Products/blob/master/Map%20Assignment.Rmd)
 
 ## My First Leaflet Map
 Create a leaflet map object.
